@@ -1,3 +1,5 @@
+02-Jan-2014 Modules with an overriden OutputName now generate .vcxproj files for VS10+ that do not generate MSBuild warnings for mismatched names.
+
 22-Dec-2013 Fixing new lines in generated .vcproj files for custom builds that can affect VisualStudio deciding whether to rebuild or not (MSB8015).
 
 17-Dec-2013 Made Opus.Core.Array and Opus.Core.DirectoryLocation cloneable for use in option collections.
